<resources>
    <string name="app_name">Photogram</string>
    <string name="upload_img">Selected Image for Upload</string>
    <string name="autofill">Enter caption</string>
    <string name="submit">Add Photo</string>
    <string name="login">Login to Photogram</string>
    <string name="upload_description">Tap above to select an image to post </string>
    <string name="upload">Post</string>
    <string name="delete">Delete Account</string>
    <string name="caption">Picture caption</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>