<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/upload_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/upload_img"
        android:src="@drawable/upload_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/upload_description"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/img_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/autofill"
        android:inputType="text"
        android:hint="@string/caption"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upload"/>

</LinearLayout>